src/test/ui/infinite/infinite-struct.stderr
error[E0072]: recursive type `Take` has infinite size
  --> $DIR/infinite-struct.rs:1:1
   |
LL | struct Take(Take);
   | ^^^^^^^^^^^ ---- recursive without indirection
   | |
   | recursive type has infinite size
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to make `Take` representable
   |
LL | struct Take(Box<Take>);
   |             ++++    +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
